service/aks/qa/app.namespace-qa.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gcd-qa
  labels:
    product: gcd
    vault: enabled
