service/aks/qa/app.deployment-qa.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: null
  name: integration-qa
  namespace: gcd-qa
spec:
  replicas: 4
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      release: integration-qa
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 4
  template:
    metadata:
      labels:
        release: integration-qa
        environment: qa
      name: integration-qa
      annotations:
        vault.security.banzaicloud.io/vault-addr: "https://vault.maersk-digital.net"
        vault.security.banzaicloud.io/vault-skip-verify: "true"
        vault.security.banzaicloud.io/vault-role: "gcd-qa"
        vault.security.banzaicloud.io/vault-path: "core-dev-west-1"
    spec:
      hostname: integration-qa
      imagePullSecrets:
      - name: maerskao
      containers:
      - name: api
        image: maerskao.azurecr.io/gcd/integration:_IMAGE_TAG_
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: api-port
        resources:
          requests:
            cpu: 100m
            memory: 1024Mi
          limits:
            cpu: 200m
            memory: 2048Mi   
---

apiVersion: v1
kind: Service
metadata:
  name: integration-qa
  labels:
    release: integration-qa
    environment: qa
spec:
  type: ClusterIP
  selector:
    release: integration-qa
  ports:
  - port: 8081
    targetPort: 8080
